workspace = { members = ["derived-cms-derive"] }
[package]
name = "derived-cms"
version = "0.2.0"
authors = ["Valentin Leistner <git@valentinleistner.com>"]
description = "Generate a CMS, complete with admin interface, headless API and database interface from Rust type definitions. Works in cunjunction with serde and ormlite and uses axum as a web server."
edition = "2021"
license = "MPL-2.0"
keywords = ["framework", "cms", "web"]
repository = "https://github.com/nitn3lav/derived-cms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "3.1.0"
axum = { version = "0.7.3", features = ["multipart"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
convert_case = "0.6.0"
derive_more = { version = "1.0.0", features = ["debug", "deref", "deref_mut", "display", "from", "from_str", "into"] }
derived-cms-derive = { version = "0.2.0", path = "derived-cms-derive" }
format-sql-query = "0.4.0"
generic-array = "1.0.0"
i18n-embed = { version = "0.15", features = ["fluent-system"] }
i18n-embed-fl = "0.9.1"
include_dir = "0.7.3"
maud = { version = "0.26.0", features = ["axum"] }
mime_guess = "2.0.4"
ormlite = { version = "0.20", features = ["uuid", "chrono", "json"] }
regex = "1.10.2"
rust-embed = "8.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = { version = "0.13.0", features = ["axum"] }
sqlmo = "0.21.0"
sqlx = "0.8.1"
sqlx-core = "0.8.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["fs"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
ts-rs = { version = "10.0.0", features = ["chrono-impl", "uuid-impl"] }
unic-langid = "0.9.4"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dev-dependencies]
serde_with = "3.6.1"
tokio = { version = "1.35.1", features = ["full"] }

[package.metadata.docs.rs]
features = ["sqlite", "json"]

[features]
json = ["ormlite/json"]
sqlite = ["ormlite/sqlite"]
postgres = ["ormlite/postgres"]

[build-dependencies]
walkdir = "2.4.0"
