[package]
name = "derived-cms-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
darling = "0.20.3"
itertools = "0.13.0"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.73"
quote = "1.0.34"
syn = { version = "2.0.44", features = ["full"] }

[lib]
proc-macro = true
