[package]
name = "derived-cms-derive"
version = "0.3.0"
authors = ["Valentin Leistner <git@valentinleistner.com>"]
description = "Macros implementation for derived-cms"
edition = "2021"
keywords = ["framework", "cms", "web", "derive"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
darling = "0.20.10"
itertools = "0.13.0"
proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.85", features = ["full"] }

[lib]
proc-macro = true
